--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-  <title>Buy Organic Traffic: How, Why, and Risks | Best Guide</title>
+  <title>Buy Real Organic Traffic: How, Why, and Risks | Best Guide</title>
     
     <!-- Meta Description -->
-    <meta name="description" content="Discover how to buy organic traffic safely. Learn what organic traffic is, where to purchase it, and the risks involved in boosting your metrics.">
+    <meta name="description" content="Discover how to buy real organic traffic safely. Learn what organic traffic is, where to purchase it, and the risks involved in boosting your metrics.">
     
   </head>
   <body>
